--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "express": "^5.1.0",
     "inngest": "^3.39.2",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "stripe": "^18.2.1",
     "svix": "^1.67.0"
